objects/AccountProductForecast.object
<CustomObject>
    <fields>
        <fullName>MFG_Total_Forecasted_Quantity__c</fullName>
        <description>This is a custom field that is looking at the native TotalForecastedQuantity field and rounds to remove any decimals. This is added to the forecast as a custom metric.</description>
        <formula>Round(TotalForecastedQuantity,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_Total_Sales_Agreement_Planned_Quant__c</fullName>
        <description>This is a custom field that is looking at the native TotalSalesAgreementPlannedQuantity field and rounds to remove any decimals. This is added to the forecast as a custom metric.</description>
        <formula>Round(TotalSalesAgreementPlannedQuantity,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Agreement Planned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Forecast__c</fullName>
        <label>Remaining Forecast</label>
        <summarizedField>AccountProductPeriodForecast.Remaining_Forecast__c</summarizedField>
        <summaryForeignKey>AccountProductPeriodForecast.AccountProductForecastId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>